# cpp_evalTfLite

./: CMakeLists.txt  README.md  test.cc
